--- a/_posts/2019-04-28-week11.md
+++ b/_posts/2019-04-28-week11.md
@@ -5,4 +5,4 @@ title: Week 11
 
 ## Summary of my contributions to the group project:
 
-This week I submitted two more pull requests and they were both merged. The [first one](https://github.com/mui-org/material-ui/pull/15478) involved adding a JavaScript demo for a new component called Customized Slider. For the [second one](https://github.com/mui-org/material-ui/pull/15493) I added TypeScript demos for the Nested List and Switch List Secondary componenets. 
+This week I submitted two more pull requests and they were both merged. The [first one](https://github.com/mui-org/material-ui/pull/15478) involved adding a JavaScript demo for a new component called Customized Slider. For the [second one](https://github.com/mui-org/material-ui/pull/15493) I added TypeScript demos for the Nested List and Switch List Secondary components. 
